--- a/his.html
+++ b/his.html
@@ -34,20 +34,21 @@
         p{text-indent: 2em;}
 
         .zoom:hover{transform: scale(1.5); cursor:pointer;}
-  img:hover{animation: glowcolor 1.2s infinite alternate;}
-  @keyframes glowcolors{
+  img:hover{animation: glowcolors 1.2s infinite alternate;}
+  @keyframes glowcolors
+  {
  0%{box-shadow: 0 0 20px hotpink;}
 25%{box-shadow: 0 0 20px skyblue;}
-75%{box-shadow: 0 0 20px gold;}
+50%{box-shadow: 0 0 20px gold;}
+75%{box-shadow: 0 0 20px darkviolet;}
 100%{box-shadow: 0 0 20px red;}
   }
 
-  .blink-bg{
-     animation: blinkbg 1s infinite alternate;
-     padding: 3px 6px;
-  }
+  .blink-bg
+     {animation: blinkbg 1s infinite alternate;
+     padding: 3px 6px;}
   @keyframes blinkbg{
-    0%{background: yellow;}
+   { 0%{background: yellow;}
     100%{background: orange;}
   }
     </style>
@@ -115,6 +116,7 @@
     <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/582530387_1861166777864138_2030555187530355197_n.jpg?stp=dst-jpg_s640x640_tt6&_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=wmsqmL9oFa4Q7kNvwEBSXwU&_nc_oc=Adnu1aEWoFr2URBDk6auuvx08HSDibiHFsTXyh0XTGhALivlc-UlcKs1oL6CTmZq3Zs&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=NHAK52mRkO9-fRjUOCcQnw&oh=00_AfgxvbJO_LYf2-7rftVZl3_gCw7No5rUdXvvC1Zr2pdz1w&oe=6932CD75" width=250 height=250 class="zoom">
      <br><br>
     <span class="blink-bg">คลิปวันจตุรมิตร 31</span>
+    <br><br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/GCEuThpjQH0?si=ehC05azqknUXCxin" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/RjwLGfJ_pf8?si=sfoWKaPFDO_q7nzV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
