--- a/his.html
+++ b/his.html
@@ -83,7 +83,7 @@
   <p>การแข่งขันฟุตบอลประเพณีจตุรมิตรสามัคคีเป็นความคิดริเริ่มของนายโปร่ง ส่งแสงเติม อาจารย์ใหญ่โรงเรียนสวนกุหลาบวิทยาลัย กับนายอารีย์ เสมประสาท อาจารย์ใหญ่โรงเรียนกรุงเทพคริสเตียนวิทยาลัย ทั้งสองท่านได้มาขอความร่วมมือจากนายบุญอวบ บูรณะบุตร อาจารย์ใหญ่โรงเรียนเทพศิรินทร์ และนายบรรณา ชโนดม อาจารย์ใหญ่โรงเรียนอัสสัมชัญ ให้ร่วมกันจัดการแข่งขันฟุตบอลระหว่างสี่สถาบัน เพื่อเชื่อมความสามัคคีของครูอาจารย์และนักเรียนทุกฝ่าย ซึ่งอาจารย์ทั้งสี่มีความเห็นพ้องกัน</p>
 <br><br>
   <center>
-    <span class=:"blink-bg:>รูปบุคคลสำคัญผู้ริเริ่มจตุรมิตร</span>
+    <span class="blink-bg">รูปบุคคลสำคัญผู้ริเริ่มจตุรมิตร</span>
     <br><br>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/%E0%B8%99%E0%B8%B2%E0%B8%A2%E0%B9%82%E0%B8%9B%E0%B8%A3%E0%B9%88%E0%B8%87_%E0%B8%AA%E0%B9%88%E0%B8%87%E0%B9%81%E0%B8%AA%E0%B8%87%E0%B9%80%E0%B8%95%E0%B8%B4%E0%B8%A1.jpg/963px-%E0%B8%99%E0%B8%B2%E0%B8%A2%E0%B9%82%E0%B8%9B%E0%B8%A3%E0%B9%88%E0%B8%87_%E0%B8%AA%E0%B9%88%E0%B8%87%E0%B9%81%E0%B8%AA%E0%B8%87%E0%B9%80%E0%B8%95%E0%B8%B4%E0%B8%A1.jpg" width=250 height=250 class="zoom">
      <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/469336660_886863866952159_5100654479580379698_n.jpg?stp=dst-jpg_p526x296_tt6&_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=2X-8QY5ewZYQ7kNvwEmPCsD&_nc_oc=AdncEPBmTZcC-fnzzWgEjys-3KhKKpnsKDN_N3KkeYyQwBNLfL6a4J-vDsKnQxP-eZk&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=Z7JJ3h480nfFWsfSfAp5iA&oh=00_Afie5yzUz3t9ZSw3Cpn44-_6vFDHbZXzaDLUGYiOUyJtLA&oe=6932E95C" width=250 height=250 class="zoom">
