--- a/his.html
+++ b/his.html
@@ -91,9 +91,11 @@
      <img src="https://www.geocities.ws/pipepaul1/omac12.jpg" width=250 height=250 class="zoom">
   <hr style="height: 8px; width: 80%;
     background:linear-gradient(to right, limegreen,yellow,pink,skyblue,violet,gold,red,white);">
+  </center>
   <p>การแข่งขันจตุรมิตรสามัคคีครั้งแรกจัดขึ้นระหว่างวันที่ 16 ตุลาคมถึง 18 พฤศจิกายน พ.ศ. 2507 โดยมีวัตถุประสงค์หลักเพื่อเสริมสร้างความสามัคคีของนักเรียนทั้งสี่โรงเรียน การแข่งขันครั้งต่อมาจัดขึ้นทุกปีจนถึงปี พ.ศ. 2528 ยกเว้นในปี พ.ศ. 2509–2510, 2515, 2517–2520 และ 2522–2523 ตั้งแต่ปี พ.ศ. 2530 เป็นต้นมา การแข่งขันถูกจัดขึ้นทุก ๆ สองปี รายการนี้เป็นการแข่งขันฟุตบอลไทยที่ได้รับความนิยมและผู้เล่นที่โดดเด่นจากการแข่งขันนี้ยังคงเป็นผู้เล่นคนสำคัญในไทยแลนด์พรีเมียร์ลีก ได้แก่ ธวัชชัย ดำรงค์อ่องตระกูล และธีรเทพ วิโนทัย งานนี้มีการออกอากาศเป็นประจำทางโทรทัศน์แห่งชาติ และการแข่งขันล่าสุด 3 รายการยังได้รับการถ่ายทอดผ่านวิดีโอสตรีมมิ่งสดพร้อมคะแนนสดที่เผยแพร่บนเว็บไซต์อย่างเป็นทางการ นอกจากการแข่งขันแล้วยังประกอบด้วยการแสดงเชียร์ และการแปรอักษร
 </p>
   <br><br>
+  <center>
     <span class="blink-bg">ภาพบรรยากาศการแข่งขันฟุตบอลจตุรมิตรครั้งที่ 31</span>
     <br><br>
     <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/584637688_122187552296492775_1759849545552126261_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=umN88NjmLikQ7kNvwEGCCwF&_nc_oc=AdmiE5cnv_7eF9U_dfLwNufvUuw8I8UQ1aJNiVqXrxQs8qCePm7KpOAhMXAEQ9Cc0TM&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=JXaJ2snCgPXgX-cmCzHvUQ&oh=00_Afi0nRG-_h2VSBmVTfuFjcK5bS0J-H6ODFHNoJXOFXkKdw&oe=6932F5DC" width=250 height=250 class="zoom">
@@ -109,8 +111,10 @@
      <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/583929761_1268271512006885_6142029656425910968_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=f727a1&_nc_ohc=lc1BGk8D7NwQ7kNvwGQbXfF&_nc_oc=AdkV1J_3HqA0kPOCKxfzsPYfAg1GKnH-3Tqb-lowIgsl0fMxFNdExgTVA155Zqo6ccw&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=qJIUVsCiOPrlPAaTSmZCGw&oh=00_AfgSProIGc4IQ9SHpWnhzejFaUacMTxlgYvdg5X1-TGS0w&oe=6932F73C" width=250 height=250 class="zoom">
   <hr style="height: 8px; width: 80%;
     background:linear-gradient(to right, limegreen,yellow,pink,skyblue,violet,gold,red,white);">
+      </center>
   <p>แม้ว่าความสามัคคีจะเป็นหัวใจสำคัญของการแข่งขันมาโดยตลอด (จตุรมิตร มาจากภาษาสันสกฤต จตุร + มิตร แปลว่า "สี่สหาย" และ สามัคคี (จากภาษาบาลีว่า สามัคคี) แปลว่า "ความกลมเกลียว" หรือ "ความกลมเกลียว") คำว่า จตุรมิตร มักถูกใช้เป็นวลีติดปากเพื่อเรียกนักเรียนหรือศิษย์เก่าของโรงเรียนที่เข้าร่วมโครงการทั้งสี่แห่ง การแข่งขันระหว่างโรงเรียนได้เพิ่มความรุนแรงขึ้น โดยเฉพาะอย่างยิ่งการแข่งขันทีมคู่ปรับระหว่างสวนกุหลาบวิทยาลัยกับเทพศิรินทร์ และอัสสัมชัญกับกรุงเทพคริสเตียนวิทยาลัย สิ่งนี้นำไปสู่ความรุนแรงระหว่างโรงเรียนหลายกรณีในช่วงหลายสัปดาห์ของการแข่งขัน ขอบเขตของปัญหาคือต้องมีการแยกผู้ชมอย่างเข้มงวดและการบังคับใช้ความปลอดภัยในระหว่างการแข่งขัน</p>
 <br><br>
+  <center>
     <span class="blink-bg">ผลการแข่งขันฟุตบอลจตุรมิตร 31</span>
     <br><br>
     <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/582530387_1861166777864138_2030555187530355197_n.jpg?stp=dst-jpg_s640x640_tt6&_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=wmsqmL9oFa4Q7kNvwEBSXwU&_nc_oc=Adnu1aEWoFr2URBDk6auuvx08HSDibiHFsTXyh0XTGhALivlc-UlcKs1oL6CTmZq3Zs&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=NHAK52mRkO9-fRjUOCcQnw&oh=00_AfgxvbJO_LYf2-7rftVZl3_gCw7No5rUdXvvC1Zr2pdz1w&oe=6932CD75" width=250 height=250 class="zoom">
