--- a/table.html
+++ b/table.html
@@ -26,7 +26,7 @@
             padding: 30px;
             text-align:center;
             border-radius: 10px;}
-     section{background: linear-gradient(limegreen,yellow,white);
+     section{background: linear-gradient(darkviolet,gold,white);
                 padding: 15px;
                 margin: 20px auto;
                 width:70%;
@@ -48,8 +48,8 @@
      {animation: blinkbg 1s infinite alternate;
      padding: 3px 6px;}
   @keyframes blinkbg{
-    0% {background: yellow;}
-    100% {background: orange;}
+    0% {background: cyan;}
+    100% {background: pink;}
   }
     </style>
   </head>
