--- a/table.html
+++ b/table.html
@@ -76,3 +76,13 @@
       💖 ประเพณีชาวจตุรมิตร<br><br>
       😎ผู้จัดทำ
     </div>
+    <section>
+      <center>
+        <h1><mark>ตารางการแข่งขัน</mark></h1>
+      </center>
+      <br><br>
+      <p><span class="blink-bg">การแข่งขันฟุตบอลประเพณีจตุรมิตรสามัคคีมีขึ้นในปี พ.ศ. 2507 เป็นปีแรก โดยลำดับการแข่งขันและการเป็นเจ้าภาพ ดังนี้
+      </p></span>
+    </section>
+  </body>
+</html>
