--- a/jatu.html
+++ b/jatu.html
@@ -43,13 +43,14 @@
     <br><br>
     <div id="menu" style="background:radial-gradient(hotpink,skyblue,limegreen,yellow);height:400px; width:200px; float:left;">
       <b>🔎สารบัญ⚽</b><br>
-      💖 บทนำ<br><br>
-      💖 ประวัติ<br><br>
+     💖 <a href="https://nattanun15.github.io/tuntun/jatu.html">หน้าแรก</a><br><br>
+      💖 <a href="https://nattanun15.github.io/tuntun/intro.html"></a>บทนำ<br><br>
+      💖 <a href="https://nattanun15.github.io/tuntun/his.html"></a>ประวัติ<br><br>
       💖 การแข่งขัน<br><br>
       💖 อันดับแชมป์<br><br>
       💖 จตุรมิตสามัคคีอาวุโส<br><br>
       💖 ประเพณีชาวจตุรมิตร<br><br>
-      😎 ผู้จัดทำ
+      😎 ด.ช.ณัฐนันท์ ประเสริฐนิยม ม.202 เลขที่ 15
     </div>
 
     <center>
