--- a/jatu.html
+++ b/jatu.html
@@ -44,9 +44,9 @@
     <div id="menu" style="background:radial-gradient(hotpink,skyblue,limegreen,yellow);height:400px; width:200px; float:left;">
       <b>🔎สารบัญ⚽</b><br>
      💖 <a href="https://nattanun15.github.io/tuntun/jatu.html">หน้าแรก</a><br><br>
-      💖 <a href="https://nattanun15.github.io/tuntun/intro.html"></a>บทนำ<br><br>
-      💖 <a href="https://nattanun15.github.io/tuntun/his.html"></a>ประวัติ<br><br>
-      💖 การแข่งขัน<br><br>
+      💖 <a href="https://nattanun15.github.io/tuntun/intro.html">บทนำ</a><br><br>
+      💖 <a href="https://nattanun15.github.io/tuntun/his.html">ประวัติ</a><br><br>
+      💖 <a href="https://nattanun15.github.io/tuntun/table.html">การแข่งขัน</a><br><br>
       💖 อันดับแชมป์<br><br>
       💖 จตุรมิตสามัคคีอาวุโส<br><br>
       💖 ประเพณีชาวจตุรมิตร<br><br>
