--- a/Dad.html
+++ b/Dad.html
@@ -4,27 +4,25 @@
 <title>วันพ่อแห่งชาติ</title>
 <style>
 mark{background-color:#FFFF99;
-color:#FFD6EE;}
+color:#000033;}
 p{text-indent:2em;}
-.content{background-color:E78FFF;
+.content{background-color:#FFCC33;
         padding : 30px;
         max-width:800px;
         margin:auto;}
 </style>
 </head>
-<body background="https://i.ytimg.com/vi/L1noPwxDLhk/maxresdefault.jpg">
+<body background="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/happy-fathers-day-minimal-yellow-background-design-template-4a45306c772ff18cc9a75e4478175a4b_screen.jpg?ts=1655118261">
 <div class="content">
         <center>
-        <h1><mark>วันพ่อแห่งชาติ💙💙💙</mark></h1>
-                <h1><mark><marquee>ผมรักพ่อที่สุดในโลกนี้ 💖💕</marquee></mark></h1>
+        <h1><mark>วันพ่อแห่งชาติ💛💛💛</mark></h1>
+                <h1><mark><marquee>ผมรักพ่อที่สุดในโลกนี้ ✨✨✨</marquee></mark></h1>
         <br><br>
         <video width="500" height="400" controls="controls">
         <source src="วันพ่อ.mp4">
         </video>
         <br><br>
         <h1><mark>สิ่งที่อย่างจะบอกพ่อ</mark></h1>
-        <img src="mom 1.jpg" width=250 height=250
-        style="border:10px dotted blue;">
 </center>
         <br><br>
         <p> สุขสันต์วันพ่อครับ ผมรักพ่อนะครับ ผมขอโทษถ้าเกิดผมทำอะไรไม่ถูกใจและจะเป็นลูกที่ดีของพ่อนะครับ     
