--- a/Dad.html
+++ b/Dad.html
@@ -15,18 +15,29 @@ p{text-indent:2em;}
 <body background="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/happy-fathers-day-minimal-yellow-background-design-template-4a45306c772ff18cc9a75e4478175a4b_screen.jpg?ts=1655118261">
 <div class="content">
         <center>
-        <h1><mark>วันพ่อแห่งชาติ💛💛💛</mark></h1>
-                <h1><mark><marquee>ผมรักพ่อที่สุดในโลกนี้ ✨✨✨</marquee></mark></h1>
+        <h1><mark>สุขสันต์วันพ่อ💛💛💛</h1></mark>
+                <h2><mark>5 ธันวาคม 2568</h2></mark>
         <br><br>
         <video width="500" height="400" controls="controls">
         <source src="วันพ่อ.mp4">
         </video>
         <br><br>
+                 <img src="mom 1.jpg" width=250 height=250>
+                <br><br>
         <h1><mark>สิ่งที่อย่างจะบอกพ่อ</mark></h1>
-</center>
         <br><br>
-        <p> สุขสันต์วันพ่อครับ ผมรักพ่อนะครับ ผมขอโทษถ้าเกิดผมทำอะไรไม่ถูกใจและจะเป็นลูกที่ดีของพ่อนะครับ     
-        </p>
+        <p>พ่อคือคนที่ยอมเหนื่อยแทนผมเสมอ แม้บางครั้งจะไม่พูดคำว่ารักออกมา แต่ทุกการกระทำของพ่อคือคำว่ารักที่ชัดเจนที่สุด พ่อสอนให้ผมรู้จักความอดทน ความรับผิดชอบ และการยืนหยัดแม้ในวันที่ลำบาก ทุกก้าวที่ผมเดินมาได้จนถึงวันนี้ ล้วนมีพ่อคอยเป็นแรงผลักอยู่ข้างหลังเสมอ</p>
+<br>
+<p>ลูกอาจไม่ใช่ลูกที่เก่งที่สุด หรือพูดเพราะที่สุด แต่ลูกอยากให้พ่อรู้ว่า ลูกภูมิใจที่ได้เกิดมาเป็นลูกของพ่อ ขอบคุณสำหรับทุกหยาดเหงื่อ ทุกความเสียสละ และทุกความห่วงใยที่พ่อมอบให้โดยไม่เคยร้องขออะไรตอบแทน</p>
+<br>
+<p>ในวันพ่อนี้ ลูกขออวยพรให้พ่อมีสุขภาพแข็งแรง มีรอยยิ้มในทุกวัน และรู้ไว้เสมอว่าลูกรักและเคารพพ่อจากหัวใจ ไม่ว่าจะนานแค่ไหน พ่อจะเป็นคนสำคัญที่สุดของลูกตลอดไป</p>
+                <br><br>
+                 <img src="mom 2.jpg" width=250 height=250>
+                <img src="mom 3.jpg" width=250 height=250>
+                <img src="mom 4.jpg" width=250 height=250>
+                <img src="mom 5.jpg" width=250 height=250>
+                <br><br>
+                </center>
         <center>
                 <br><br>
                 <h1><mark>บทกลอนมอบให้พ่อ</mark></h1>
