--- a/Dad.html
+++ b/Dad.html
@@ -22,7 +22,7 @@ p{text-indent:2em;}
         <source src="วันพ่อ.mp4">
         </video>
         <br><br>
-                 <img src="mom 1.jpg" width=250 height=250>
+                 <img src="dad1.jpg" width=250 height=250>
                 <br><br>
         <h1><mark>สิ่งที่อย่างจะบอกพ่อ</mark></h1>
         <br><br>
@@ -32,10 +32,10 @@ p{text-indent:2em;}
 <br>
 <p>ในวันพ่อนี้ ลูกขออวยพรให้พ่อมีสุขภาพแข็งแรง มีรอยยิ้มในทุกวัน และรู้ไว้เสมอว่าลูกรักและเคารพพ่อจากหัวใจ ไม่ว่าจะนานแค่ไหน พ่อจะเป็นคนสำคัญที่สุดของลูกตลอดไป</p>
                 <br><br>
-                 <img src="mom 2.jpg" width=250 height=250>
-                <img src="mom 3.jpg" width=250 height=250>
-                <img src="mom 4.jpg" width=250 height=250>
-                <img src="mom 5.jpg" width=250 height=250>
+                 <img src="dad2.jpg" width=250 height=250>
+                <img src="dad3.jpg" width=250 height=250>
+                <img src="dad4.jpg" width=250 height=250>
+                <img src="dad5.jpg" width=250 height=250>
                 <br><br>
                 </center>
         <center>
