--- a/Dad.html
+++ b/Dad.html
@@ -25,6 +25,7 @@ p{text-indent:2em;}
                  <img src="dad1.jpg" width=250 height=250>
                 <br><br>
         <h1><mark>สิ่งที่อย่างจะบอกพ่อ</mark></h1>
+        </center>
         <br><br>
         <p>พ่อคือคนที่ยอมเหนื่อยแทนผมเสมอ แม้บางครั้งจะไม่พูดคำว่ารักออกมา แต่ทุกการกระทำของพ่อคือคำว่ารักที่ชัดเจนที่สุด พ่อสอนให้ผมรู้จักความอดทน ความรับผิดชอบ และการยืนหยัดแม้ในวันที่ลำบาก ทุกก้าวที่ผมเดินมาได้จนถึงวันนี้ ล้วนมีพ่อคอยเป็นแรงผลักอยู่ข้างหลังเสมอ</p>
 <br>
@@ -32,10 +33,11 @@ p{text-indent:2em;}
 <br>
 <p>ในวันพ่อนี้ ลูกขออวยพรให้พ่อมีสุขภาพแข็งแรง มีรอยยิ้มในทุกวัน และรู้ไว้เสมอว่าลูกรักและเคารพพ่อจากหัวใจ ไม่ว่าจะนานแค่ไหน พ่อจะเป็นคนสำคัญที่สุดของลูกตลอดไป</p>
                 <br><br>
-                 <img src="dad2.jpg" width=250 height=250>
-                <img src="dad3.jpg" width=250 height=250>
-                <img src="dad4.jpg" width=250 height=250>
-                <img src="dad5.jpg" width=250 height=250>
+                <center>
+                 <img src="dad2.jpg" width=250 height=250><br><br>
+                <img src="dad3.jpg" width=250 height=250><br><br>
+                <img src="dad4.jpg" width=250 height=250><br><br>
+                <img src="dad5.jpg" width=250 height=250><br><br>
                 <br><br>
                 </center>
         <center>
