--- a/วันเด็ก.html
+++ b/วันเด็ก.html
@@ -91,7 +91,7 @@
 
     <div class="header-section">
         <h1>วันเด็กแห่งชาติ</h1>
-        <p>ต้อนรับสู่เว็บไซต์ วันเด็กแห่งชาติ 🤩</p>
+        <marquee><p>ต้อนรับสู่เว็บไซต์ วันเด็กแห่งชาติ 🤩</p></marquee>
     </div>
 
     <div class="container">
@@ -127,9 +127,6 @@
         </div>
 
         <div class="row bg-light-blue" style="flex-direction: row-reverse;">
-            <div class="content-image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6ZuZsOuGXNfVGis34ZZAy_tK94rlv4taNzg&s">
-            </div>
             <div class="content-text">
                 <h2 style="color: #0369a1;">คำขวัญวันปีใหม่ 2569</h2>
                <br><br>
