--- a/วันเด็ก.html
+++ b/วันเด็ก.html
@@ -100,15 +100,20 @@
             <div class="content-image">
                 <img src="https://png.pngtree.com/thumb_back/fh260/background/20190223/ourmid/pngtree-cartoon-cute-childrens-day-background-design-day-backgroundholiday-backgroundchild-image_72045.jpg">
             </div>
+            <center>
             <div class="content-text">
                 <h2>ประวัติวันเด็กแห่งชาติ</h2>
                 <p>วันเด็กแห่งชาติในไทยจัดขึ้นครั้งแรกเมื่อวันที่ 3 ต.ค. 2498 ตามคำเชิญชวนขององค์การสหประชาชาติ โดยจัดวันจันทร์แรกของเดือน ต.ค. ต่อมาในปี 2508 ได้เปลี่ยนมาเป็นวันเสาร์ที่ 2 ของเดือน ม.ค. แทน เนื่องจากเป็นช่วงหมดฤดูฝนและตรงกับวันหยุดราชการ โดยมีวัตถุประสงค์เพื่อกระตุ้นให้สังคมเห็นความสำคัญของเด็กและเยาวชน </p>
             </div>
+                </center>
+            <br><br>
+            <img src="https://media.istockphoto.com/id/473313240/th/%E0%B8%A3%E0%B8%B9%E0%B8%9B%E0%B8%96%E0%B9%88%E0%B8%B2%E0%B8%A2/%E0%B9%80%E0%B8%94%E0%B9%87%E0%B8%81-%E0%B9%86-%E0%B9%80%E0%B8%A5%E0%B9%88%E0%B8%99%E0%B9%83%E0%B8%99%E0%B8%AA%E0%B8%A7%E0%B8%99%E0%B8%AA%E0%B8%B2%E0%B8%98%E0%B8%B2%E0%B8%A3%E0%B8%93%E0%B8%B0%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B8%AA%E0%B8%99%E0%B8%B2%E0%B8%A1%E0%B9%80%E0%B8%94%E0%B9%87%E0%B8%81%E0%B9%80%E0%B8%A5%E0%B9%88%E0%B8%99%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%AA%E0%B8%B7%E0%B9%88%E0%B8%AD%E0%B8%AA%E0%B8%B2%E0%B8%A3.jpg?s=612x612&w=0&k=20&c=H88UeeRkEysk3H83GC51L15CgqwSLLjKlwEfcgqhVLA=" width=350 height=250>
+            <img src="https://cdn11.bigcommerce.com/s-36yz7qwnyo/images/stencil/870x450/uploaded_images/shifflerequipmentsales-106871-school-playground-safety-blogbanner1.jpg?t=1632399955" width=350 height=250>
         </div>
 
         <div class="row bg-light-blue" style="flex-direction: row-reverse;">
             <div class="content-image">
-                <img src="https://media.istockphoto.com/id/1394942720/th/%E0%B9%80%E0%B8%A7%E0%B8%84%E0%B9%80%E0%B8%95%E0%B8%AD%E0%B8%A3%E0%B9%8C/%E0%B8%9E%E0%B8%A7%E0%B8%87%E0%B8%A1%E0%B8%B2%E0%B8%A5%E0%B8%B1%E0%B8%A2%E0%B8%87%E0%B8%B2%E0%B8%99%E0%B8%A3%E0%B8%B7%E0%B9%88%E0%B8%99%E0%B9%80%E0%B8%A3%E0%B8%B4%E0%B8%87%E0%B8%AA%E0%B8%B5%E0%B8%AA%E0%B8%B1%E0%B8%99%E0%B8%AA%E0%B8%94%E0%B9%83%E0%B8%AA%E0%B8%9E%E0%B8%A3%E0%B9%89%E0%B8%AD%E0%B8%A1%E0%B8%98%E0%B8%87%E0%B8%9A%E0%B8%99%E0%B8%9E%E0%B8%B7%E0%B9%89%E0%B8%99%E0%B8%AB%E0%B8%A5%E0%B8%B1%E0%B8%87%E0%B8%AA%E0%B8%B5%E0%B8%82%E0%B8%B2%E0%B8%A7.jpg?s=612x612&w=0&k=20&c=s9XXhr4mK0igtJygl7ybX688pPlgupQfG78cKjtQRHA=">
+                <img src="https://www.nirvanadevelopment.co.th/uploaded/editor/images/2018/nvd-11w1-01-magic-of-play-02.jpg">
             </div>
             <div class="content-text">
                 <h2 style="color: #0ea5e9;">ต้นกำเนิดของวันเด็ก</h2>
@@ -125,13 +130,14 @@
                 <p>เพื่อให้ประชาชนตระหนักถึงความสำคัญและความต้องการของเด็ก กระตุ้นให้เด็กยึดมั่นในสถาบันชาติ ศาสนา พระมหากษัตริย์ รู้จักหน้าที่ของตนเอง มีระเบียบวินัย ตระหนักถึงสิทธิของตนเอง ปลูกฝังให้เป็นคนดีมีคุณธรรม รวมถึงส่งเสริมการพัฒนาทั้งด้านร่างกาย อารมณ์ สังคม สติปัญญา และปัญญา </p>
             </div>
         </div>
-
+<center>
         <div class="row bg-light-blue" style="flex-direction: row-reverse;">
             <div class="content-text">
                 <h2 style="color: #0369a1;">คำขวัญวันปีใหม่ 2569</h2>
                <br><br>
-               <p>คำขวัญวันเด็กแห่งชาติ ประจำปี 2569 โดย นายอนุทิน ชาญวีรกูล ในฐานะนายกรัฐมนตรี คือ “รักชาติไทย ใส่ใจโลก” เป็นคำขวัญที่เน้นปลูกฝังให้เด็กและเยาวชนมีความรักและความภาคภูมิใจในชาติ พร้อมตระหนักถึงความรับผิดชอบต่อสิ่งแวดล้อม สังคม และประชาคมโลก </p>
-                <img src="https://www.flickr.com/photo_download.gne?id=54987758373&secret=0ba78f1c4d&size=o&source=photoPageEngagement">
+               <p>คำขวัญวันเด็กแห่งชาติ ประจำปี 2569 โดย นายอนุทิน ชาญวีรกูล ในฐานะนายกรัฐมนตรี คือ “รักชาติไทย ใส่ใจโลก” เป็นคำขวัญที่เน้นปลูกฝังให้เด็กและเยาวชนมีความรักและความภาคภูมิใจในชาติ พร้อมตระหนักถึงความรับผิดชอบต่อสิ่งแวดล้อม สังคม และประชาคมโลก</p> 
+                <img src="https://www.flickr.com/photo_download.gne?id=54987758373&secret=0ba78f1c4d&size=o&source=photoPageEngagement" width=350 height=250>
+                </center>
         </div>
         </div>
     </div>
