--- a/โรงเรียนสวนกุหลาบวิทยาลัย.html
+++ b/โรงเรียนสวนกุหลาบวิทยาลัย.html
@@ -17,7 +17,7 @@
             padding: 20px;
         }
         footer {
-            background-color: FFF2BF;
+            background-color:262315;
             color: white;
             text-align: center;
             padding: 10px;
@@ -34,16 +34,10 @@
 <header>
     <h1>โรงเรียนสวนกุหลาบวิทยาลัย</h1>
 </header>
-<section id="home">
-    <h2>หน้าแรก</h2>
-    <p>ยินดีต้อนรับสู่เว็บไซต์แนะนำโรงเรียนสวนกุหลาบวิทยาลัย </p>
-</section>
-
 <section id="history">
     <h2>ประวัติความเป็นมา</h2>
-    <p>โรงเรียนสวนกุหลาบวิทยาลัย ก่อตั้งขึ้นเมื่อปี พ.ศ. 2425 
-    เป็นโรงเรียนชายล้วนแห่งแรกของประเทศไทย 
-    มีประวัติยาวนานและสร้างบุคคลสำคัญของประเทศมากมาย</p>
+    <p>โรงเรียนสวนกุหลาบวิทยาลัยก่อตั้งขึ้นเมื่อปี พ.ศ. 2425 ในสมัยพระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว เดิมชื่อ “โรงเรียนพระตำหนักสวนกุหลาบ” ตั้งอยู่ในพระบรมมหาราชวัง เพื่อฝึกหัดทหารมหาดเล็กและให้การศึกษาแก่บุตรหลานขุนนาง ต่อมาได้ปรับเปลี่ยนเป็นโรงเรียนสำหรับประชาชนทั่วไปและขยายออกนอกพระราชวัง
+ในปี พ.ศ. 2454 โรงเรียนได้รวมฝ่ายไทยและฝ่ายอังกฤษเข้าด้วยกัน และใช้ชื่อว่า “โรงเรียนสวนกุหลาบวิทยาลัย” ตั้งอยู่บริเวณวัดราชบูรณะ อาคารสำคัญคือ “ตึกยาว” ซึ่งได้รับการขึ้นทะเบียนเป็นโบราณสถาน โรงเรียนมีบทบาทสำคัญทั้งด้านการศึกษาและสังคม และเป็นสถาบันการศึกษาชั้นนำที่ผลิตบุคลากรคุณภาพของประเทศมายาวนานกว่า 143 ปี</p>
 </section>
 
 <section id="vision">
