--- a/โรงเรียนสวนกุหลาบวิทยาลัย.html
+++ b/โรงเรียนสวนกุหลาบวิทยาลัย.html
@@ -87,8 +87,7 @@ footer{
 <section id="vision">
 <h2>วิสัยทัศน์และพันธกิจ</h2>
 <p>
-<strong>วิสัยทัศน์:</strong> เป็นเลิศทางวิชาการ สืบสานวัฒนธรรม ก้าวล้ำเทคโนโลยี 
-สร้างวิถีนวัตกร สู่การพัฒนาที่ยั่งยืน
+<strong>วิสัยทัศน์:</strong> โรงเรียนสวนกุหลาบวิทยาลัยเป็นสถาบันการศึกษาชั้นนำในเวทีโลกสร้างสุภาพบุรุษสวนกุหลาบมีความสุขบนพื้นฐานคุณธรรมและวิถีความเป็นไทย
 </p>
 <p>
 <strong>พันธกิจ:</strong> มุ่งจัดการศึกษาเพื่อความเป็นเลิศทางวิชาการ 
